@startuml
scale 0.4
class ItemContainer {
    -ITEMS: Set<Item>
    +getItemByName(name)
    +getAllItems()
    +getRandomItemByType(type)
    +getRandomItem()
}

interface ItemFactory {
    +createHealingItem(name, description, healingAmount)
    +createPowerUpItem(name, description, powerUpValue, boostedAttribute)
    +createUnUsableItem(name, description)
}

class ItemFactoryImpl {
}

enum ItemNames {
    
}

ItemContainer --> Item
ItemContainer --> ItemNames
ItemContainer --> ItemFactory
ItemFactory --> Item
ItemFactoryImpl --|> ItemFactory
@enduml